<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:maxWidth="300dp">

    <EditText
        android:id="@+id/etEditItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="280dp"
        android:autofillHints="text"
        android:hint="@string/edit_item_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Save Button: width set to wrap_content -->
    <Button
        android:id="@+id/btnSaveEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_dialogEditItem"
        app:layout_constraintTop_toBottomOf="@id/etEditItemName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteEdit"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <!-- Delete Button: width set to wrap_content -->
    <Button
        android:id="@+id/btnDeleteEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintTop_toBottomOf="@id/etEditItemName"
        app:layout_constraintStart_toEndOf="@id/btnSaveEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
