<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Total Price Display -->
    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_0_00"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- RecyclerView to display list of items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItemList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/tvTotalPrice"
        app:layout_constraintBottom_toTopOf="@+id/btnAddItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Add Item Button: part of horizontal chain -->
    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        app:layout_constraintTop_toBottomOf="@id/rvItemList"
        app:layout_constraintBottom_toTopOf="@+id/btnAddFromMyItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnClearList"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <!-- Clear List Button: part of the same horizontal chain -->

    <!-- Add Items From My List Button: placed at the bottom -->

    <Button
        android:id="@+id/btnClearList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear_list"
        app:layout_constraintBottom_toTopOf="@+id/btnAddFromMyItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAddItem"
        app:layout_constraintTop_toBottomOf="@id/rvItemList"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAddFromMyItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_items_from_my_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddItem" />
</androidx.constraintlayout.widget.ConstraintLayout>
