<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- RecyclerView for listing items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMyItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnAddItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Add Items Button placed above the bottom buttons -->
    <Button
        android:id="@+id/btnAddItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_items_addFromMyItems"
        app:layout_constraintTop_toBottomOf="@id/rvMyItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectAll"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <!-- Select All and Unselect All buttons in a horizontal chain -->
    <Button
        android:id="@+id/btnSelectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnUnselectAll"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/btnUnselectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unselect_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSelectAll"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
